objects/Custom_Object__c.object
<CustomObject>
    <fields>
        <fullName>tdgdrg__c</fullName>
        <label>tdgdrg</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>boolean2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>boolean2</label>
        <type>Checkbox</type>
    </fields>
    <label>Custom Object</label>
    <nameField>
        <label>Custom Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>